Le Gall -> algorithms

--- a/algorithms.bib
+++ b/algorithms.bib
@@ -2,520 +2,531 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2020-07-13 13:40:56 -0500 
+%% Created for Jeff Erickson at 2021-05-31 17:52:41 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
+@inproceedings{l-ptfmm-14,
+	author = {Le~Gall, François},
+	booktitle = {Proc. 25th int. Symb. Alg. Comput.},
+	date-added = {2021-05-31 17:52:36 -0500},
+	date-modified = {2021-05-31 17:52:36 -0500},
+	doi = {10.1145/2608628.2608664},
+	pages = {296--303},
+	title = {Powers of tensors and fast matrix multiplication},
+	year = {2014},
+	Bdsk-Url-1 = {https://doi.org/10.1145/2608628.2608664}}
+
 @article{j-easps-77,
-	Author = {Johnson, Donald B.},
-	Date-Added = {2020-07-12 17:50:21 -0500},
-	Date-Modified = {2020-07-12 17:50:45 -0500},
-	Doi = {10.1145/321992.321993},
-	Journal = {J. Assoc. Comput. Mach.},
-	Number = {1},
-	Pages = {1--13},
-	Title = {Efficient algorithms for shortest paths in sparse networks},
-	Volume = {24},
-	Year = {1977},
+	author = {Johnson, Donald B.},
+	date-added = {2020-07-12 17:50:21 -0500},
+	date-modified = {2020-07-12 17:50:45 -0500},
+	doi = {10.1145/321992.321993},
+	journal = {J. Assoc. Comput. Mach.},
+	number = {1},
+	pages = {1--13},
+	title = {Efficient algorithms for shortest paths in sparse networks},
+	volume = {24},
+	year = {1977},
 	Bdsk-Url-1 = {https://doi.org/10.1145/321992.321993}}
 
 @article{ek-tiaen-72,
-	Author = {Edmonds, Jack and Karp, Richard M.},
-	Date-Added = {2020-07-12 17:49:11 -0500},
-	Date-Modified = {2020-07-12 17:49:33 -0500},
-	Doi = {10.1145/321694.321699},
-	Journal = {J. Assoc. Comput. Mach.},
-	Number = {2},
-	Pages = {248--264},
-	Read = {1},
-	Title = {Theoretical improvements in algorithmic efficiency of network flow problems},
-	Volume = {19},
-	Year = {1972},
+	author = {Edmonds, Jack and Karp, Richard M.},
+	date-added = {2020-07-12 17:49:11 -0500},
+	date-modified = {2020-07-12 17:49:33 -0500},
+	doi = {10.1145/321694.321699},
+	journal = {J. Assoc. Comput. Mach.},
+	number = {2},
+	pages = {248--264},
+	read = {1},
+	title = {Theoretical improvements in algorithmic efficiency of network flow problems},
+	volume = {19},
+	year = {1972},
 	Bdsk-Url-1 = {https://doi.org/10.1145/321694.321699}}
 
 @article{t-stust-71,
-	Author = {Tomizawa, Nobuaki},
-	Comments = {reweighting successive shortest paths},
-	Date-Added = {2020-07-12 17:48:56 -0500},
-	Date-Modified = {2020-07-12 17:50:04 -0500},
-	Doi = {10.1002/net.3230010206},
-	Journal = {Networks},
-	Pages = {173--194},
-	Read = {1},
-	Title = {On some techniques useful for solution of transportation network problems},
-	Volume = {1},
-	Year = {1971},
+	author = {Tomizawa, Nobuaki},
+	comments = {reweighting successive shortest paths},
+	date-added = {2020-07-12 17:48:56 -0500},
+	date-modified = {2020-07-12 17:50:04 -0500},
+	doi = {10.1002/net.3230010206},
+	journal = {Networks},
+	pages = {173--194},
+	read = {1},
+	title = {On some techniques useful for solution of transportation network problems},
+	volume = {1},
+	year = {1971},
 	Bdsk-Url-1 = {https://doi.org/10.1002/net.3230010206}}
 
 @article{w-pdmia-67,
-	Author = {Waite, William M.},
-	Comments = {Cycle detection in pne-vertex periodic graphs},
-	Date-Added = {2020-04-27 11:05:48 -0500},
-	Date-Modified = {2020-04-27 11:07:31 -0500},
-	Doi = {10.1145/321386.321392},
-	Journal = {J. Assoc. Comput. Mach.},
-	Number = {2},
-	Pages = {300--310},
-	Title = {Path detection in multidimensional iterative arrays},
-	Volume = {14},
-	Year = {1967},
+	author = {Waite, William M.},
+	comments = {Cycle detection in pne-vertex periodic graphs},
+	date-added = {2020-04-27 11:05:48 -0500},
+	date-modified = {2020-04-27 11:07:31 -0500},
+	doi = {10.1145/321386.321392},
+	journal = {J. Assoc. Comput. Mach.},
+	number = {2},
+	pages = {300--310},
+	title = {Path detection in multidimensional iterative arrays},
+	volume = {14},
+	year = {1967},
 	Bdsk-Url-1 = {https://doi.org/10.1145/321386.321392}}
 
 @phdthesis{i-tdgtv-87,
-	Author = {Iwano, Kazuo},
-	Date-Added = {2020-04-27 10:51:51 -0500},
-	Date-Modified = {2020-07-13 13:40:56 -0500},
-	Month = {October},
-	School = {Princeton Univ.},
-	Title = {Two-Dimensional Dynamic Graphs and their {VLSI} Applications},
-	Url = {https://search.proquest.com/docview/303485362},
-	Year = {1987},
+	author = {Iwano, Kazuo},
+	date-added = {2020-04-27 10:51:51 -0500},
+	date-modified = {2020-07-13 13:40:56 -0500},
+	month = {October},
+	school = {Princeton Univ.},
+	title = {Two-Dimensional Dynamic Graphs and their {VLSI} Applications},
+	url = {https://search.proquest.com/docview/303485362},
+	year = {1987},
 	Bdsk-Url-1 = {https://search.proquest.com/docview/303485362}}
 
 @article{kmw-ocure-67,
-	Author = {Karp, Richard M. and Miller, Raymond E. and Winograd, Shmuel},
-	Date-Added = {2020-04-24 14:43:51 -0500},
-	Date-Modified = {2020-07-12 17:34:29 -0500},
-	Doi = {10.1145/321406.321418},
-	Journal = {J. Assoc. Comput. Mach.},
-	Keywords = {periodic graphs},
-	Number = {3},
-	Pages = {563--590},
-	Read = {1},
-	Title = {The organization of computations for uniform recurrence equations},
-	Volume = {14},
-	Year = {1967},
+	author = {Karp, Richard M. and Miller, Raymond E. and Winograd, Shmuel},
+	date-added = {2020-04-24 14:43:51 -0500},
+	date-modified = {2020-07-12 17:34:29 -0500},
+	doi = {10.1145/321406.321418},
+	journal = {J. Assoc. Comput. Mach.},
+	keywords = {periodic graphs},
+	number = {3},
+	pages = {563--590},
+	read = {1},
+	title = {The organization of computations for uniform recurrence equations},
+	volume = {14},
+	year = {1967},
 	Bdsk-Url-1 = {https://doi.org/10.1145/321406.321418}}
 
 @inproceedings{is-tcigw-87,
-	Author = {Iwano, Kazuo and Steiglitz, Kenneth},
-	Booktitle = {Proc. 19th Ann. ACM Symp. Theory Comput.},
-	Date-Added = {2020-04-24 14:43:51 -0500},
-	Date-Modified = {2020-04-24 16:15:31 -0500},
-	Doi = {10.1145/28395.28401},
-	Pages = {46--55},
-	Read = {1},
-	Title = {Testing for cycles in infintie graphs with periodic structure},
-	Year = {1987},
+	author = {Iwano, Kazuo and Steiglitz, Kenneth},
+	booktitle = {Proc. 19th Ann. ACM Symp. Theory Comput.},
+	date-added = {2020-04-24 14:43:51 -0500},
+	date-modified = {2020-04-24 16:15:31 -0500},
+	doi = {10.1145/28395.28401},
+	pages = {46--55},
+	read = {1},
+	title = {Testing for cycles in infintie graphs with periodic structure},
+	year = {1987},
 	Bdsk-Url-1 = {https://doi.org/10.1145/28395.28401}}
 
 @article{rk-riati-88,
-	Author = {Rao, Sailesh K. and Kailath, Thomas},
-	Date-Added = {2020-04-24 14:43:51 -0500},
-	Date-Modified = {2020-04-24 16:15:33 -0500},
-	Doi = {10.1109/5.4402},
-	Journal = {Proc. IEEE},
-	Keywords = {preiodic graphs},
-	Number = {3},
-	Pages = {259--269},
-	Read = {1},
-	Title = {Regular iterative algorithms and their implementation on processor arrays},
-	Volume = {76},
-	Year = {1988},
+	author = {Rao, Sailesh K. and Kailath, Thomas},
+	date-added = {2020-04-24 14:43:51 -0500},
+	date-modified = {2020-04-24 16:15:33 -0500},
+	doi = {10.1109/5.4402},
+	journal = {Proc. IEEE},
+	keywords = {preiodic graphs},
+	number = {3},
+	pages = {259--269},
+	read = {1},
+	title = {Regular iterative algorithms and their implementation on processor arrays},
+	volume = {76},
+	year = {1988},
 	Bdsk-Url-1 = {https://doi.org/10.1109/5.4402}}
 
 @article{fw-tams-94,
-	Author = {Fredman, Michael L. and Willard, Dan E.},
-	Date-Added = {2019-11-05 17:05:07 -0600},
-	Date-Modified = {2019-11-05 17:08:07 -0600},
-	Doi = {10.1016/S0022-0000(05)80064-9},
-	Journal = {J. Comput. Syst. Sci.},
-	Number = {3},
-	Pages = {533--551},
-	Read = {1},
-	Title = {Trans-dichotomous algorithms for minimum spanning trees and shortest paths},
-	Volume = {48},
-	Year = {1994},
+	author = {Fredman, Michael L. and Willard, Dan E.},
+	date-added = {2019-11-05 17:05:07 -0600},
+	date-modified = {2019-11-05 17:08:07 -0600},
+	doi = {10.1016/S0022-0000(05)80064-9},
+	journal = {J. Comput. Syst. Sci.},
+	number = {3},
+	pages = {533--551},
+	read = {1},
+	title = {Trans-dichotomous algorithms for minimum spanning trees and shortest paths},
+	volume = {48},
+	year = {1994},
 	Bdsk-Url-1 = {https://doi.org/10.1016/S0022-0000(05)80064-9}}
 
 @incollection{e-mms-90,
-	Author = {van Emde~Boas, Peter},
-	Booktitle = {Algorithms and Complexity},
-	Date-Added = {2019-08-14 20:25:40 -0500},
-	Date-Modified = {2019-08-14 20:26:55 -0500},
-	Doi = {10.1016/B978-0-444-88071-0.50006-0},
-	Pages = {1--36},
-	Read = {1},
-	Series = {Handbook of Theoretical Computer Science},
-	Title = {Machine Models and Simulations},
-	Volume = {1},
-	Year = {1990},
+	author = {van Emde~Boas, Peter},
+	booktitle = {Algorithms and Complexity},
+	date-added = {2019-08-14 20:25:40 -0500},
+	date-modified = {2019-08-14 20:26:55 -0500},
+	doi = {10.1016/B978-0-444-88071-0.50006-0},
+	pages = {1--36},
+	read = {1},
+	series = {Handbook of Theoretical Computer Science},
+	title = {Machine Models and Simulations},
+	volume = {1},
+	year = {1990},
 	Bdsk-Url-1 = {https://doi.org/10.1016/B978-0-444-88071-0.50006-0}}
 
 @article{cr-tbram-73,
-	Author = {Cook, Stephen A. and Reckhow, Robert A.},
-	Comments = {Defines the theoretical RAM model, ALGOL-RAM},
-	Date-Added = {2019-08-14 20:20:27 -0500},
-	Date-Modified = {2019-11-05 16:48:57 -0600},
-	Doi = {10.1016/S0022-0000(73)80029-7},
-	Journal = {J. Comput. Syst. Sci.},
-	Number = {4},
-	Pages = {354--375},
-	Read = {1},
-	Title = {Time Bounded Random Access Machines},
-	Volume = {7},
-	Year = {1973},
+	author = {Cook, Stephen A. and Reckhow, Robert A.},
+	comments = {Defines the theoretical RAM model, ALGOL-RAM},
+	date-added = {2019-08-14 20:20:27 -0500},
+	date-modified = {2019-11-05 16:48:57 -0600},
+	doi = {10.1016/S0022-0000(73)80029-7},
+	journal = {J. Comput. Syst. Sci.},
+	number = {4},
+	pages = {354--375},
+	read = {1},
+	title = {Time Bounded Random Access Machines},
+	volume = {7},
+	year = {1973},
 	Bdsk-Url-1 = {https://doi.org/10.1016/S0022-0000(73)80029-7}}
 
 @inproceedings{w-dnstm-83,
-	Author = {Wiedermann, Juraj},
-	Booktitle = {Information Processing 83, Proc. IFIP 9th World Computer Congress},
-	Date-Added = {2019-08-14 20:17:02 -0500},
-	Date-Modified = {2019-08-14 20:19:02 -0500},
-	Pages = {163--168},
-	Title = {Deterministic and Nondeterministic Simulation of the {RAM} by the {Turing} Machine},
-	Year = {1983}}
+	author = {Wiedermann, Juraj},
+	booktitle = {Information Processing 83, Proc. IFIP 9th World Computer Congress},
+	date-added = {2019-08-14 20:17:02 -0500},
+	date-modified = {2019-08-14 20:19:02 -0500},
+	pages = {163--168},
+	title = {Deterministic and Nondeterministic Simulation of the {RAM} by the {Turing} Machine},
+	year = {1983}}
 
 @article{klp-fstmr-88,
-	Author = {Katajainen, Jyrki and van Leeuwen, Jan and Penttonen, Martti},
-	Date-Added = {2019-08-14 20:13:12 -0500},
-	Date-Modified = {2019-08-14 20:16:56 -0500},
-	Doi = {10.1137/0217005},
-	Journal = {{SIAM} J. Comput.},
-	Number = {1},
-	Pages = {77--88},
-	Read = {1},
-	Title = {Fast Simulation of Turing Machines by Random Access Machines},
-	Volume = {17},
-	Year = {1988},
+	author = {Katajainen, Jyrki and van Leeuwen, Jan and Penttonen, Martti},
+	date-added = {2019-08-14 20:13:12 -0500},
+	date-modified = {2019-08-14 20:16:56 -0500},
+	doi = {10.1137/0217005},
+	journal = {{SIAM} J. Comput.},
+	number = {1},
+	pages = {77--88},
+	read = {1},
+	title = {Fast Simulation of Turing Machines by Random Access Machines},
+	volume = {17},
+	year = {1988},
 	Bdsk-Url-1 = {https://doi.org/10.1137/0217005}}
 
 @article{r-rrcs-91,
-	Author = {Robson, John M.},
-	Date-Added = {2019-08-14 20:10:13 -0500},
-	Date-Modified = {2019-08-14 20:11:18 -0500},
-	Doi = {10.1016/0304-3975(91)90177-4},
-	Journal = {Theoret. Comput. Sci.},
-	Number = {1},
-	Pages = {141--149},
-	Read = {1},
-	Title = {An {$O(T\log T)$} Reduction from {RAM} Computations to Satisfiability},
-	Volume = {82},
-	Year = {1991},
+	author = {Robson, John M.},
+	date-added = {2019-08-14 20:10:13 -0500},
+	date-modified = {2019-08-14 20:11:18 -0500},
+	doi = {10.1016/0304-3975(91)90177-4},
+	journal = {Theoret. Comput. Sci.},
+	number = {1},
+	pages = {141--149},
+	read = {1},
+	title = {An {$O(T\log T)$} Reduction from {RAM} Computations to Satisfiability},
+	volume = {82},
+	year = {1991},
 	Bdsk-Url-1 = {https://doi.org/10.1016/0304-3975(91)90177-4}}
 
 @article{pf-racm-79,
-	Author = {Pippenger, Nicholas and Fischer, Michael J.},
-	Date-Added = {2019-08-14 20:07:22 -0500},
-	Date-Modified = {2019-08-14 20:17:00 -0500},
-	Doi = {10.1145/322123.322138},
-	Journal = {J. Assoc. Comput. Mach.},
-	Number = {2},
-	Pages = {361--381},
-	Read = {1},
-	Title = {Relations among complexity measures},
-	Volume = {26},
-	Year = {1979},
+	author = {Pippenger, Nicholas and Fischer, Michael J.},
+	date-added = {2019-08-14 20:07:22 -0500},
+	date-modified = {2019-08-14 20:17:00 -0500},
+	doi = {10.1145/322123.322138},
+	journal = {J. Assoc. Comput. Mach.},
+	number = {2},
+	pages = {361--381},
+	read = {1},
+	title = {Relations among complexity measures},
+	volume = {26},
+	year = {1979},
 	Bdsk-Url-1 = {https://doi.org/10.1145/322123.322138}}
 
 @article{c-spfrnc-88,
-	Author = {Cook, Stephen A.},
-	Date-Added = {2019-08-14 20:00:20 -0500},
-	Date-Modified = {2019-08-14 20:06:28 -0500},
-	Doi = {10.1016/0020-0190(88)90152-4},
-	Journal = {Inf. Proc. Lett.},
-	Month = {11 January},
-	Number = {5},
-	Pages = {269--270},
-	Title = {Short propositional formulas represent nondeterministic computations},
-	Volume = {26},
-	Year = {1988},
+	author = {Cook, Stephen A.},
+	date-added = {2019-08-14 20:00:20 -0500},
+	date-modified = {2019-08-14 20:06:28 -0500},
+	doi = {10.1016/0020-0190(88)90152-4},
+	journal = {Inf. Proc. Lett.},
+	month = {11 January},
+	number = {5},
+	pages = {269--270},
+	title = {Short propositional formulas represent nondeterministic computations},
+	volume = {26},
+	year = {1988},
 	Bdsk-Url-1 = {https://doi.org/10.1016/0020-0190(88)90152-4}}
 
 @article{l-usp-73,
-	Author = {Levin, Leonid A.},
-	Booktitle = {Problems of Information Transmission},
-	Date-Added = {2019-08-14 19:44:17 -0500},
-	Date-Modified = {2019-08-14 20:16:58 -0500},
-	Journal = {Problems Inform. Transmission},
-	Number = {3},
-	Pages = {265--266},
-	Read = {0},
-	Title = {Universal Sequential Search Problems},
-	Url = {http://mi.mathnet.ru/eng/ppi/v9/i3/p115},
-	Volume = {9},
-	Year = {1973},
+	author = {Levin, Leonid A.},
+	booktitle = {Problems of Information Transmission},
+	date-added = {2019-08-14 19:44:17 -0500},
+	date-modified = {2019-08-14 20:16:58 -0500},
+	journal = {Problems Inform. Transmission},
+	number = {3},
+	pages = {265--266},
+	read = {0},
+	title = {Universal Sequential Search Problems},
+	url = {http://mi.mathnet.ru/eng/ppi/v9/i3/p115},
+	volume = {9},
+	year = {1973},
 	Bdsk-Url-1 = {http://mi.mathnet.ru/eng/ppi/v9/i3/p115}}
 
 @inproceedings{c-ctpp-71,
-	Author = {Cook, Stephen},
-	Booktitle = {Proc. 3rd Ann. Symp. Theory Comput.},
-	Date-Added = {2019-08-14 19:42:18 -0500},
-	Date-Modified = {2019-08-14 19:43:27 -0500},
-	Doi = {10.1145/800157.805047},
-	Pages = {151--158},
-	Read = {1},
-	Title = {The complexity of theorem proving procedures},
-	Year = {1971},
+	author = {Cook, Stephen},
+	booktitle = {Proc. 3rd Ann. Symp. Theory Comput.},
+	date-added = {2019-08-14 19:42:18 -0500},
+	date-modified = {2019-08-14 19:43:27 -0500},
+	doi = {10.1145/800157.805047},
+	pages = {151--158},
+	read = {1},
+	title = {The complexity of theorem proving procedures},
+	year = {1971},
 	Bdsk-Url-1 = {https://doi.org/10.1145/800157.805047}}
 
 @book{k-fa-97,
-	Author = {Knuth, Donald E.},
-	Date-Added = {2019-08-14 19:37:29 -0500},
-	Date-Modified = {2019-08-14 19:40:25 -0500},
-	Publisher = {Addison-Wesley},
-	Read = {1},
-	Series = {The Art of Computer Programming},
-	Title = {Fundamental Algorithms},
-	Volume = {I},
-	Year = {1997}}
+	author = {Knuth, Donald E.},
+	date-added = {2019-08-14 19:37:29 -0500},
+	date-modified = {2019-08-14 19:40:25 -0500},
+	publisher = {Addison-Wesley},
+	read = {1},
+	series = {The Art of Computer Programming},
+	title = {Fundamental Algorithms},
+	volume = {I},
+	year = {1997}}
 
 @article{bt-lspdw-09,
-	Author = {Bradford, Phillip G. and Thomas, David A.},
-	Date-Added = {2019-03-13 14:45:14 +0100},
-	Date-Modified = {2019-03-13 14:49:46 +0100},
-	Doi = {10.1051/ita/2009011},
-	Journal = {RAIRO-Theor. Inf. Appl.},
-	Keywords = {CFG shortest paths, negative edges},
-	Number = {3},
-	Pages = {567--583},
-	Read = {1},
-	Title = {Labeled shortest paths in digraphs with negative and positive edge weights},
-	Volume = {43},
-	Year = {2009},
+	author = {Bradford, Phillip G. and Thomas, David A.},
+	date-added = {2019-03-13 14:45:14 +0100},
+	date-modified = {2019-03-13 14:49:46 +0100},
+	doi = {10.1051/ita/2009011},
+	journal = {RAIRO-Theor. Inf. Appl.},
+	keywords = {CFG shortest paths, negative edges},
+	number = {3},
+	pages = {567--583},
+	read = {1},
+	title = {Labeled shortest paths in digraphs with negative and positive edge weights},
+	volume = {43},
+	year = {2009},
 	Bdsk-Url-1 = {https://doi.org/10.1051/ita/2009011}}
 
 @mastersthesis{f-sscl-78,
-	Author = {Fajuyigbe, Oladele},
-	Comments = {O(S_{RD}) time, where for CNF grammars S_{RD} = # production rules},
-	Date-Added = {2018-02-10 23:21:30 +0000},
-	Date-Modified = {2018-02-10 23:29:49 +0000},
-	Read = {1},
-	School = {Oregon St. Univ.},
-	Title = {The shortest strings in a context-free langauge},
-	Url = {http://ir.library.oregonstate.edu/concern/graduate_thesis_or_dissertations/9z903315x},
-	Year = {1978},
+	author = {Fajuyigbe, Oladele},
+	comments = {O(S_{RD}) time, where for CNF grammars S_{RD} = # production rules},
+	date-added = {2018-02-10 23:21:30 +0000},
+	date-modified = {2018-02-10 23:29:49 +0000},
+	read = {1},
+	school = {Oregon St. Univ.},
+	title = {The shortest strings in a context-free langauge},
+	url = {http://ir.library.oregonstate.edu/concern/graduate_thesis_or_dissertations/9z903315x},
+	year = {1978},
 	Bdsk-Url-1 = {http://ir.library.oregonstate.edu/concern/graduate_thesis_or_dissertations/9z903315x}}
 
 @misc{gr-cpqws-17,
-	Arxiv = {1612.08872v2},
-	Author = {Grigorev, Semyon and Ragozina, Anastasiya},
-	Date-Added = {2018-02-10 23:11:30 +0000},
-	Date-Modified = {2018-02-10 23:12:18 +0000},
-	Howpublished = {Preprint},
-	Month = {January},
-	Read = {1},
-	Title = {Context-Free Path Querying with Structural Representation of Result},
-	Year = {2017}}
+	arxiv = {1612.08872v2},
+	author = {Grigorev, Semyon and Ragozina, Anastasiya},
+	date-added = {2018-02-10 23:11:30 +0000},
+	date-modified = {2018-02-10 23:12:18 +0000},
+	howpublished = {Preprint},
+	month = {January},
+	read = {1},
+	title = {Context-Free Path Querying with Structural Representation of Result},
+	year = {2017}}
 
 @article{se-sqcg-08,
-	Author = {Sevon, Petteri and Eronen, Lauri},
-	Date-Added = {2018-02-10 23:08:03 +0000},
-	Date-Modified = {2018-02-10 23:12:19 +0000},
-	Doi = {10.1515/jib-2008-100},
-	Journal = {J. Integrative Bioinformatics},
-	Number = {2},
-	Pages = {157--172},
-	Read = {1},
-	Title = {Subgraph Queries by Context-free Grammars},
-	Volume = {5},
-	Year = {2008},
+	author = {Sevon, Petteri and Eronen, Lauri},
+	date-added = {2018-02-10 23:08:03 +0000},
+	date-modified = {2018-02-10 23:12:19 +0000},
+	doi = {10.1515/jib-2008-100},
+	journal = {J. Integrative Bioinformatics},
+	number = {2},
+	pages = {157--172},
+	read = {1},
+	title = {Subgraph Queries by Context-free Grammars},
+	volume = {5},
+	year = {2008},
 	Bdsk-Url-1 = {https://doi.org/10.1515/jib-2008-100}}
 
 @misc{h-qpguc-16,
-	Arxiv = {1502.02242v2},
-	Author = {Hellings, Jelle},
-	Date-Added = {2018-02-10 22:59:40 +0000},
-	Date-Modified = {2018-02-10 23:01:00 +0000},
-	Howpublished = {Preprint},
-	Month = {January},
-	Read = {1},
-	Title = {Querying for Paths in Graphs using Context-Free Path Queries},
-	Year = {2016}}
+	arxiv = {1502.02242v2},
+	author = {Hellings, Jelle},
+	date-added = {2018-02-10 22:59:40 +0000},
+	date-modified = {2018-02-10 23:01:00 +0000},
+	howpublished = {Preprint},
+	month = {January},
+	read = {1},
+	title = {Querying for Paths in Graphs using Context-Free Path Queries},
+	year = {2016}}
 
 @inproceedings{h-ccpq-14,
-	Author = {Hellings, Jelle},
-	Booktitle = {Proc. 17th Int Conf. Database Theory},
-	Date-Added = {2018-02-10 22:57:48 +0000},
-	Date-Modified = {2018-02-10 23:01:00 +0000},
-	Doi = {10.5441/002/icdt.2014.15},
-	Pages = {119--130},
-	Read = {1},
-	Title = {Conjunctive Context-Free Path Queries},
-	Year = {2014},
+	author = {Hellings, Jelle},
+	booktitle = {Proc. 17th Int Conf. Database Theory},
+	date-added = {2018-02-10 22:57:48 +0000},
+	date-modified = {2018-02-10 23:01:00 +0000},
+	doi = {10.5441/002/icdt.2014.15},
+	pages = {119--130},
+	read = {1},
+	title = {Conjunctive Context-Free Path Queries},
+	year = {2014},
 	Bdsk-Url-1 = {https://doi.org/10.5441/002/icdt.2014.15}}
 
 @inproceedings{mj-afsts-75,
-	Author = {McLean, Michael J. and Johnston, Daniel B.},
-	Booktitle = {Combaintorial Mathematics~{III}},
-	Date-Added = {2018-02-10 22:27:48 +0000},
-	Date-Modified = {2018-07-02 20:38:04 +0000},
-	Doi = {10.1007/BFb0069557},
-	Number = {452},
-	Pages = {180--196},
-	Publisher = {Springer},
-	Read = {1},
-	Series = {Lecture Notes Math.},
-	Title = {An algorithm for finding the shortest terminal strings which can be produced from non-terminals in context-free grammars},
-	Year = {1975},
+	author = {McLean, Michael J. and Johnston, Daniel B.},
+	booktitle = {Combaintorial Mathematics~{III}},
+	date-added = {2018-02-10 22:27:48 +0000},
+	date-modified = {2018-07-02 20:38:04 +0000},
+	doi = {10.1007/BFb0069557},
+	number = {452},
+	pages = {180--196},
+	publisher = {Springer},
+	read = {1},
+	series = {Lecture Notes Math.},
+	title = {An algorithm for finding the shortest terminal strings which can be produced from non-terminals in context-free grammars},
+	year = {1975},
 	Bdsk-Url-1 = {https://doi.org/10.1007/BFb0069557}}
 
 @article{mr-icccr-00,
-	Author = {Melski, David and Reps, Thomas},
-	Comments = {O((N+T)^3 n^3) time},
-	Date-Added = {2017-11-25 23:30:33 +0000},
-	Date-Modified = {2017-11-25 23:44:58 +0000},
-	Doi = {10.1016/S0304-3975(00)00049-9},
-	Journal = {Theoret. Comput. Sci.},
-	Keywords = {CFG reachability},
-	Number = {1--2},
-	Pages = {29--98},
-	Read = {1},
-	Title = {Interconvertibility of a class of set constraints and context-free-language reachability},
-	Volume = {248},
-	Year = {2000},
+	author = {Melski, David and Reps, Thomas},
+	comments = {O((N+T)^3 n^3) time},
+	date-added = {2017-11-25 23:30:33 +0000},
+	date-modified = {2017-11-25 23:44:58 +0000},
+	doi = {10.1016/S0304-3975(00)00049-9},
+	journal = {Theoret. Comput. Sci.},
+	keywords = {CFG reachability},
+	number = {1--2},
+	pages = {29--98},
+	read = {1},
+	title = {Interconvertibility of a class of set constraints and context-free-language reachability},
+	volume = {248},
+	year = {2000},
 	Bdsk-Url-1 = {https://dx.doi.org/10.1016/S0304-3975(00)00049-9}}
 
 @inproceedings{y-gmdt-90,
-	Author = {Yannakakis, Mihalis},
-	Booktitle = {Proc. 9th ACM SIGACT-SIGMOD-SIGART Symp. Principles Database Syst.},
-	Comments = {O(n^3) time for fixed grammar},
-	Date-Added = {2017-11-25 23:04:25 +0000},
-	Date-Modified = {2017-11-25 23:44:50 +0000},
-	Doi = {10.1145/298514.298576},
-	Keywords = {CFG reachability},
-	Pages = {230--242},
-	Read = {1},
-	Title = {Graph-theoretic methods in database theory},
-	Year = {1990},
+	author = {Yannakakis, Mihalis},
+	booktitle = {Proc. 9th ACM SIGACT-SIGMOD-SIGART Symp. Principles Database Syst.},
+	comments = {O(n^3) time for fixed grammar},
+	date-added = {2017-11-25 23:04:25 +0000},
+	date-modified = {2017-11-25 23:44:50 +0000},
+	doi = {10.1145/298514.298576},
+	keywords = {CFG reachability},
+	pages = {230--242},
+	read = {1},
+	title = {Graph-theoretic methods in database theory},
+	year = {1990},
 	Bdsk-Url-1 = {https://dx.doi.org/10.1145/298514.298576}}
 
 @article{bjm-flcpp-00,
-	Author = {Barrett, Chris and Jacob, Riko and Marathe, Madhav},
-	Comments = {O(n^3 NP) timex},
-	Date-Added = {2017-09-28 01:34:21 +0000},
-	Date-Modified = {2017-11-25 23:45:17 +0000},
-	Doi = {10.1137/S0097539798337716},
-	Journal = {SIAM J. Comput.},
-	Keywords = {CFG shortest paths},
-	Number = {3},
-	Pages = {809--837},
-	Read = {1},
-	Title = {Formal-language-constrained path problems},
-	Volume = {30},
-	Year = {2000},
+	author = {Barrett, Chris and Jacob, Riko and Marathe, Madhav},
+	comments = {O(n^3 NP) timex},
+	date-added = {2017-09-28 01:34:21 +0000},
+	date-modified = {2017-11-25 23:45:17 +0000},
+	doi = {10.1137/S0097539798337716},
+	journal = {SIAM J. Comput.},
+	keywords = {CFG shortest paths},
+	number = {3},
+	pages = {809--837},
+	read = {1},
+	title = {Formal-language-constrained path problems},
+	volume = {30},
+	year = {2000},
 	Bdsk-Url-1 = {http://dx.doi.org/10.1137/S0097539798337716}}
 
 @article{c-sarsm-08,
-	Author = {Chaudhuri, Swarat},
-	Date-Added = {2017-09-27 15:00:58 +0000},
-	Date-Modified = {2017-09-27 15:04:11 +0000},
-	Doi = {10.1145/1328438.1328460},
-	Journal = {SIGPLAN Notices},
-	Note = {\emph{Proc. 35th Ann. ACM SIGPLAN-SIGACT Symp. Principles Prog. Lang.}},
-	Number = {1},
-	Pages = {159--169},
-	Read = {1},
-	Title = {Subcubic algorithms for recursive state machines},
-	Volume = {43},
-	Year = {2008},
+	author = {Chaudhuri, Swarat},
+	date-added = {2017-09-27 15:00:58 +0000},
+	date-modified = {2017-09-27 15:04:11 +0000},
+	doi = {10.1145/1328438.1328460},
+	journal = {SIGPLAN Notices},
+	note = {\emph{Proc. 35th Ann. ACM SIGPLAN-SIGACT Symp. Principles Prog. Lang.}},
+	number = {1},
+	pages = {159--169},
+	read = {1},
+	title = {Subcubic algorithms for recursive state machines},
+	volume = {43},
+	year = {2008},
 	Bdsk-Url-1 = {http://dx.doi.org/10.1145/1328438.1328460}}
 
 @article{dek-spp-82,
-	Author = {Dolev, Danny and Even, Shimon and Karp, Richard M.},
-	Date-Added = {2017-09-27 14:51:28 +0000},
-	Date-Modified = {2017-09-27 14:53:12 +0000},
-	Doi = {10.1016/S0019-9958(82)90401-6},
-	Journal = {Inf. Control},
-	Keywords = {CFL reachability, CYK-Shimbel},
-	Number = {1--3},
-	Pages = {57--68},
-	Read = {1},
-	Title = {On the security of ping-ping protocols},
-	Volume = {55},
-	Year = {1982},
+	author = {Dolev, Danny and Even, Shimon and Karp, Richard M.},
+	date-added = {2017-09-27 14:51:28 +0000},
+	date-modified = {2017-09-27 14:53:12 +0000},
+	doi = {10.1016/S0019-9958(82)90401-6},
+	journal = {Inf. Control},
+	keywords = {CFL reachability, CYK-Shimbel},
+	number = {1--3},
+	pages = {57--68},
+	read = {1},
+	title = {On the security of ping-ping protocols},
+	volume = {55},
+	year = {1982},
 	Bdsk-Url-1 = {http://dx.doi.org/10.1016/S0019-9958(82)90401-6}}
 
 @inproceedings{y-pctum-77,
-	Author = {Yao, Andrew C. C.},
-	Booktitle = {Proc. 18th Ann. Symp. Found. Comput. Sci.},
-	Date-Added = {2013-12-04 21:02:41 +0000},
-	Date-Modified = {2013-12-04 21:03:55 +0000},
-	Title = {Probabilistic computations: Toward a unified measure of complexity},
-	Volume = {222--227},
-	Year = {1977}}
+	author = {Yao, Andrew C. C.},
+	booktitle = {Proc. 18th Ann. Symp. Found. Comput. Sci.},
+	date-added = {2013-12-04 21:02:41 +0000},
+	date-modified = {2013-12-04 21:03:55 +0000},
+	title = {Probabilistic computations: Toward a unified measure of complexity},
+	volume = {222--227},
+	year = {1977}}
 
 @book{clrs-ia-09,
-	Author = {Cormen, Thomas H. and Leiserson, Charles E. and Rivest, Ronald R. and Stein, Clifford},
-	Date-Added = {2012-09-24 02:30:58 +0000},
-	Date-Modified = {2012-09-24 02:38:14 +0000},
-	Publisher = {MIT Press},
-	Read = {1},
-	Title = {Introduction to Algorithms},
-	Year = {2009}}
+	author = {Cormen, Thomas H. and Leiserson, Charles E. and Rivest, Ronald R. and Stein, Clifford},
+	date-added = {2012-09-24 02:30:58 +0000},
+	date-modified = {2012-09-24 02:38:14 +0000},
+	publisher = {MIT Press},
+	read = {1},
+	title = {Introduction to Algorithms},
+	year = {2009}}
 
 @techreport{b-mnbo-95,
-	Author = {Bradford, Phillip G.},
-	Date-Added = {2012-09-21 04:14:23 +0000},
-	Date-Modified = {2012-09-21 04:21:23 +0000},
-	Institution = {Max-Planck-Institut für Informatik},
-	Number = {MPI-I-95-1-025},
-	Read = {1},
-	Title = {Matching nuts and bolts optimally},
-	Type = {{Tech. Rep.}},
-	Url = {http://domino.mpi-inf.mpg.de/internet/reports.nsf/NumberView/1995-1-025},
-	Year = {1995},
+	author = {Bradford, Phillip G.},
+	date-added = {2012-09-21 04:14:23 +0000},
+	date-modified = {2012-09-21 04:21:23 +0000},
+	institution = {Max-Planck-Institut für Informatik},
+	number = {MPI-I-95-1-025},
+	read = {1},
+	title = {Matching nuts and bolts optimally},
+	type = {{Tech. Rep.}},
+	url = {http://domino.mpi-inf.mpg.de/internet/reports.nsf/NumberView/1995-1-025},
+	year = {1995},
 	Bdsk-Url-1 = {http://domino.mpi-inf.mpg.de/internet/reports.nsf/NumberView/1995-1-025}}
 
 @article{abf-mnbf-96,
-	Author = {Alon, Noga and Bradford, Phillip G. and Fleischer, Rudolf},
-	Comments = {O(n log^2 n) deterministic},
-	Date-Added = {2012-09-21 04:08:48 +0000},
-	Date-Modified = {2012-09-21 04:10:02 +0000},
-	Journal = {Inform. Proc. Lett.},
-	Number = {3},
-	Pages = {123--127},
-	Read = {1},
-	Title = {Matching nuts and bolts faster},
-	Volume = {59},
-	Year = {1996}}
+	author = {Alon, Noga and Bradford, Phillip G. and Fleischer, Rudolf},
+	comments = {O(n log^2 n) deterministic},
+	date-added = {2012-09-21 04:08:48 +0000},
+	date-modified = {2012-09-21 04:10:02 +0000},
+	journal = {Inform. Proc. Lett.},
+	number = {3},
+	pages = {123--127},
+	read = {1},
+	title = {Matching nuts and bolts faster},
+	volume = {59},
+	year = {1996}}
 
 @inproceedings{bf-mnbf-95,
-	Author = {Bradford, Phillip G. and Fleischer, Rudolf},
-	Booktitle = {Proc. 6th. Int. Symp. Algorithms Comput.},
-	Comments = {O(n log^2 n) deterministic},
-	Date-Added = {2012-09-21 04:05:35 +0000},
-	Date-Modified = {2012-09-21 04:09:57 +0000},
-	Editor = {Staples, John and Eades, Peter and Katoh, Naoki and Moffat, Alistair},
-	Number = {1004},
-	Pages = {402--408},
-	Read = {1},
-	Series = {Lecture Notes Comput. Sci.},
-	Title = {Matching nuts and bolts faster},
-	Year = {1995}}
+	author = {Bradford, Phillip G. and Fleischer, Rudolf},
+	booktitle = {Proc. 6th. Int. Symp. Algorithms Comput.},
+	comments = {O(n log^2 n) deterministic},
+	date-added = {2012-09-21 04:05:35 +0000},
+	date-modified = {2012-09-21 04:09:57 +0000},
+	editor = {Staples, John and Eades, Peter and Katoh, Naoki and Moffat, Alistair},
+	number = {1004},
+	pages = {402--408},
+	read = {1},
+	series = {Lecture Notes Comput. Sci.},
+	title = {Matching nuts and bolts faster},
+	year = {1995}}
 
 @inproceedings{abfkno-mnb-94,
-	Author = {Alon, Noga and Blum, Manuel and Fiat, Amos and Kannan, Sampath and Noar, Moni and Ostrovsky, Rafail},
-	Booktitle = {Proc. 5th Ann. ACM-SIAM Symp. Discrete Algorithms},
-	Comments = {O(n log^4 n) determinstic},
-	Date-Added = {2012-09-21 04:01:04 +0000},
-	Date-Modified = {2012-09-21 04:03:06 +0000},
-	Pages = {690--696},
-	Read = {1},
-	Title = {Matching nuts and bolts},
-	Year = {1994}}
+	author = {Alon, Noga and Blum, Manuel and Fiat, Amos and Kannan, Sampath and Noar, Moni and Ostrovsky, Rafail},
+	booktitle = {Proc. 5th Ann. ACM-SIAM Symp. Discrete Algorithms},
+	comments = {O(n log^4 n) determinstic},
+	date-added = {2012-09-21 04:01:04 +0000},
+	date-modified = {2012-09-21 04:03:06 +0000},
+	pages = {690--696},
+	read = {1},
+	title = {Matching nuts and bolts},
+	year = {1994}}
 
 @book{r-cwiaa-92,
-	Author = {Rawlins, Gregory J. E.},
-	Date-Added = {2012-09-21 03:56:45 +0000},
-	Date-Modified = {2012-09-21 04:03:15 +0000},
-	Keywords = {Nuts and bolts},
-	Publisher = {Computer Science Press/W. H. Freeman},
-	Read = {1},
-	Title = {Compared To What?: An Introduction to The Analysis of Algorithms},
-	Year = {1992}}
+	author = {Rawlins, Gregory J. E.},
+	date-added = {2012-09-21 03:56:45 +0000},
+	date-modified = {2012-09-21 04:03:15 +0000},
+	keywords = {Nuts and bolts},
+	publisher = {Computer Science Press/W. H. Freeman},
+	read = {1},
+	title = {Compared To What?: An Introduction to The Analysis of Algorithms},
+	year = {1992}}
 
 @article{js-mnbot-98,
-	Author = {Komlós, János and Ma, Yuan and Szemerédi, Endre},
-	Date-Added = {2012-09-21 03:50:37 +0000},
-	Date-Modified = {2012-09-21 04:01:06 +0000},
-	Journal = {SIAM J. Discrete Math.},
-	Number = {3},
-	Pages = {347--372},
-	Read = {1},
-	Title = {Matching nuts and bolts in ${O(n\log n)}$ time},
-	Volume = {11},
-	Year = {1998}}
+	author = {Komlós, János and Ma, Yuan and Szemerédi, Endre},
+	date-added = {2012-09-21 03:50:37 +0000},
+	date-modified = {2012-09-21 04:01:06 +0000},
+	journal = {SIAM J. Discrete Math.},
+	number = {3},
+	pages = {347--372},
+	read = {1},
+	title = {Matching nuts and bolts in ${O(n\log n)}$ time},
+	volume = {11},
+	year = {1998}}
