--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,50 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2021-05-31 15:11:04 -0500 
+%% Created for Jeff Erickson at 2021-06-01 11:07:16 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{celp-hmgt-21,
+	arxiv = {2007.07927},
+	author = {Chambers, Erin Wolf and Erickson, Jeff and Lin, Patrick and Parsa, Salman},
+	booktitle = {Proc. 32nd Ann. ACM-SIAM Symp. Discrete Algorithms},
+	date-added = {2021-06-01 11:01:33 -0500},
+	date-modified = {2021-06-01 11:01:33 -0500},
+	doi = {10.1137/1.9781611976465.164},
+	pages = {2759--2778},
+	title = {How to Morph Graphs on the Torus},
+	year = {2021},
+	Bdsk-Url-1 = {https://doi.org/10.1137/1.9781611976465.164}}
+
+@article{hf-mvcap-06,
+	author = {Hormann, Kai and Floater, Michael S.},
+	date-added = {2021-06-01 10:51:13 -0500},
+	date-modified = {2021-06-01 10:52:55 -0500},
+	doi = {10.1145/1183287.1183295},
+	journal = {ACM Trans. Graphics},
+	number = {4},
+	pages = {1424--1441},
+	title = {Mean value coordiantes for arbitrary planar polygons},
+	volume = {25},
+	year = {2006},
+	Bdsk-Url-1 = {https://doi.org/10.1145/1183287.1183295}}
+
+@article{f-mvc-03,
+	author = {Floater, Michael S.},
+	date-added = {2021-06-01 10:38:28 -0500},
+	date-modified = {2021-06-01 10:43:04 -0500},
+	doi = {10.1016/S0167-8396(03)00002-5},
+	journal = {Comput. Aided Geom. Design},
+	number = {1},
+	pages = {19--27},
+	title = {Mean value coordinates},
+	volume = {20},
+	year = {2003},
+	Bdsk-Url-1 = {https://doi.org/10.1016/S0167-8396(03)00002-5}}
 
 @article{al-sote-17,
 	author = {Aigerman, Noam and Lipman, Yaron},
@@ -19,7 +57,8 @@
 	pages = {90:1--90:13},
 	title = {Spherical orbifold {Tutte} embeddings},
 	volume = {36},
-	year = {2017}}
+	year = {2017},
+	Bdsk-Url-1 = {https://doi.org/10.1145/3072959.3073615}}
 
 @article{al-hote-16,
 	author = {Aigerman, Noam and Lipman, Yaron},
@@ -31,7 +70,8 @@
 	pages = {217:1--217:14},
 	title = {Hyperbolic orbifold {Tutte} embeddings},
 	volume = {35},
-	year = {2016}}
+	year = {2016},
+	Bdsk-Url-1 = {https://doi.org/10.1145/2980179.2982412}}
 
 @article{al-ote-15,
 	author = {Aigerman, Noam and Lipman, Yaron},
@@ -43,7 +83,8 @@
 	pages = {190:1--190:12},
 	title = {Orbifold {Tutte} embeddings},
 	volume = {34},
-	year = {2015}}
+	year = {2015},
+	Bdsk-Url-1 = {https://doi.org/10.1145/2816795.2818099}}
 
 @misc{l-sgts-20,
 	arxiv = {1910.03070},
@@ -77,7 +118,8 @@
 	pages = {593--636},
 	title = {Simplicial energy and simplicial harmonic maps},
 	volume = {19},
-	year = {2015}}
+	year = {2015},
+	Bdsk-Url-1 = {https://doi.org/10.4310/AJM.2015.v19.n4.a2}}
 
 @inproceedings{chhs-prlhei-83,
 	author = {Connelly, Robert and Henderson, David W. and Ho, Chung Wu and Starbird, Michael},
