--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,24 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2021-06-01 11:07:16 -0500 
+%% Created for Jeff Erickson at 2021-06-03 08:43:22 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{sg-imct-03,
+	author = {Surazhsky, Vitaly and Gotsman, Craig},
+	date-added = {2021-06-03 08:40:16 -0500},
+	date-modified = {2021-06-03 08:43:20 -0500},
+	doi = {10.1142/S0218654303000115},
+	journal = {Int. J. Shape Modeling},
+	number = {2},
+	pages = {191--201},
+	title = {Intrinsic morphing of compatible triangulations},
+	volume = {9},
+	year = {2003}}
 
 @inproceedings{celp-hmgt-21,
 	arxiv = {2007.07927},
@@ -24,12 +36,12 @@
 @article{hf-mvcap-06,
 	author = {Hormann, Kai and Floater, Michael S.},
 	date-added = {2021-06-01 10:51:13 -0500},
-	date-modified = {2021-06-01 10:52:55 -0500},
+	date-modified = {2021-06-01 15:53:02 -0500},
 	doi = {10.1145/1183287.1183295},
 	journal = {ACM Trans. Graphics},
 	number = {4},
 	pages = {1424--1441},
-	title = {Mean value coordiantes for arbitrary planar polygons},
+	title = {Mean value coordinates for arbitrary planar polygons},
 	volume = {25},
 	year = {2006},
 	Bdsk-Url-1 = {https://doi.org/10.1145/1183287.1183295}}
@@ -2325,15 +2337,16 @@
 	title = {The Scientific Letters and Papers of James Clerk Maxwell. Volume 2: 1862--1873},
 	year = {2009}}
 
-@misc{bhl-mpgdu-14,
+@inproceedings{bhl-mpgdu-13,
 	arxiv = {1411.6185},
 	author = {Barrera-Cruz, Fidel and Haxell, Penny and Lubiw, Anna},
+	booktitle = {Proc. 13th Mexican Conf. Discrete Math. Comput. Geom.},
 	date-added = {2020-07-14 14:01:00 -0500},
-	date-modified = {2020-07-14 14:02:06 -0500},
-	howpublished = {Preprint},
-	month = {November},
+	date-modified = {2021-06-03 07:28:54 -0500},
+	pages = {57--65},
 	title = {Morphing Planar Graph Drawings with Unidirectional Moves},
-	year = {2014},
+	url = {https://web.archive.org/web/20150406060434/http://www.matem.unam.mx/jorgefest/files/proceedings_final.pdf},
+	year = {2013},
 	Bdsk-Url-1 = {http://arxiv.org/abs/1411.6185}}
 
 @inproceedings{bls-mpgwp-05,
@@ -2685,16 +2698,6 @@
 	year = {2020},
 	Bdsk-Url-1 = {https://doi.org/10.4230/LIPIcs.SoCG.2020.40}}
 
-@misc{bhl-mpgdw-11,
-	arxiv = {1411.6185},
-	author = {Barrera-Cruz, Fidel and Haxell, Penny and Lubiw, Anna},
-	date-added = {2020-06-07 08:37:28 -0500},
-	date-modified = {2020-06-07 08:42:19 -0500},
-	howpublished = {Preprint},
-	month = {November},
-	title = {Morphing Planar Graph Drawings with Unidirectional Moves},
-	year = {2011}}
-
 @article{lrt-gnd-79,
 	author = {Lipton, Richard J. and Rose, Donald J. and Tarjan, Robert Endre},
 	date-added = {2020-06-07 08:33:22 -0500},
@@ -2750,10 +2753,10 @@
 	Bdsk-Url-1 = {https://doi.org/10.1007/978-3-319-03841-4_5}}
 
 @inproceedings{aacbf-mpgdw-13,
-	author = {Alamdari, Soroush and Angelini, Patrizio and Chan, Timothy M. and Battista, Giuseppe Di and Frati, Fabrizio and Lubiw, Anna and Patrignani, Maurizio and Roselli, Vincenzo and Singla, Sahil and Wilkinson, BryanT.},
+	author = {Alamdari, Soroush and Angelini, Patrizio and Chan, Timothy M. and Battista, Giuseppe Di and Frati, Fabrizio and Lubiw, Anna and Patrignani, Maurizio and Roselli, Vincenzo and Singla, Sahil and Wilkinson, Bryan T.},
 	booktitle = {Proc. 24th Ann. ACM-SIAM Symp. Discrete Algorithms},
 	date-added = {2020-06-07 08:14:16 -0500},
-	date-modified = {2020-06-07 08:17:47 -0500},
+	date-modified = {2021-06-03 07:20:24 -0500},
 	doi = {10.1137/1.9781611973105.119},
 	pages = {1656--1667},
 	title = {Morphing planar graph drawings with a polynomial number of steps},
